--- a/index.html
+++ b/index.html
@@ -1,1 +1,84 @@
+<!DOCTYPE html>
+<html lang="es">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Películas que Revolucionaron el Cine</title>
+    <style>
+        body {
+            margin: 0;
+            font-family: Arial, sans-serif;
+            background-color: violet;
+            color: #f6f1e3; /* Blanco hueso */
+        }
+        h1 {
+            text-align: center;
+            padding: 50px 0;
+            font-size: 3em;
+        }
+        .content {
+            padding: 20px;
+            line-height: 1.6;
+        }
+        .video-container {
+            display: flex;
+            justify-content: center;
+            padding: 20px;
+        }
+        iframe {
+            max-width: 100%;
+            height: 400px; /* Ajusta la altura según sea necesario */
+        }
+    </style>
+</head>
+<body>
+    <h1>Películas que Revolucionaron el Cine</h1>
+    <div class="content">
+        <p>Aquí tienes una lista de películas que marcaron un antes y un después en la historia de la cinematografía por sus innovaciones técnicas, narrativas y estéticas:</p>
+        
+        <ol>
+            <li><strong>Viaje a la luna (1902)</strong> – Georges Méliès
+                <br>Esta película pionera es una de las primeras en emplear efectos especiales. Méliès, utilizando técnicas como la sobreimpresión y el montaje, creó una historia de ciencia ficción visualmente impactante para su época. Inspiró el cine de fantasía y ciencia ficción y mostró el potencial creativo del medio cinematográfico.
+            </li>
+            <li><strong>El nacimiento de una nación (1915)</strong> – D.W. Griffith
+                <br>Griffith introdujo innovaciones en el montaje y el uso de primeros planos para narrar una historia épica, aunque la película es controvertida por su contenido racista. Su influencia en el desarrollo de técnicas narrativas y cinematográficas fue enorme, consolidando el lenguaje cinematográfico moderno.
+            </li>
+            <li><strong>El acorazado Potemkin (1925)</strong> – Serguéi Eisenstein
+                <br>Con su uso revolucionario del montaje, Eisenstein creó una obra que intensificaba la emoción y el suspenso de cada escena. La famosa "escena de las escaleras de Odesa" es un referente en el uso del montaje para generar impacto emocional, y la película es estudiada por su estilo visual y su mensaje político.
+            </li>
+            <li><strong>El cantante de jazz (1927)</strong> – Alan Crosland
+                <br>Considerada la primera película con sonido sincronizado, este filme marcó el inicio de la era del cine sonoro. La posibilidad de incluir diálogos cambió para siempre la manera de hacer cine, enriqueciendo las historias y dando origen a nuevos géneros como el musical.
+            </li>
+            <li><strong>Ciudadano Kane (1941)</strong> – Orson Welles
+                <br>Esta película es famosa por su estructura narrativa no lineal y su innovador uso de la profundidad de campo, ángulos inusuales y movimientos de cámara. Es considerada una de las películas más influyentes por su experimentación visual y su compleja narrativa, que inspiraron a generaciones de cineastas.
+            </li>
+            <li><strong>Psicosis (1960)</strong> – Alfred Hitchcock
+                <br>Psicosis revolucionó el cine de suspenso con su estructura impredecible y su manejo del suspenso psicológico. Su famosa escena de la ducha y su giro narrativo innovador hicieron que el cine de terror y suspenso alcanzara una nueva madurez, influyendo profundamente en el género.
+            </li>
+            <li><strong>2001: Odisea en el espacio (1968)</strong> – Stanley Kubrick
+                <br>Este clásico de ciencia ficción revolucionó la narrativa visual del género, combinando efectos especiales de alta calidad con una narrativa filosófica y abstracta. Kubrick redefinió la ciencia ficción como un género serio y profundo, y sus efectos visuales y uso de la música clásica siguen siendo emblemáticos.
+            </li>
+            <li><strong>Star Wars (1977)</strong> – George Lucas
+                <br>Star Wars marcó el inicio de los efectos especiales modernos y del concepto de “blockbuster”, impulsando el desarrollo de tecnologías de efectos visuales avanzados. Su éxito comercial también redefinió la industria, abriendo paso a grandes franquicias y nuevas estrategias de mercadotecnia.
+            </li>
+            <li><strong>Toy Story (1995)</strong> – John Lasseter
+                <br>Como el primer largometraje realizado completamente con animación por computadora, Toy Story demostró el potencial de la animación digital, inaugurando una nueva era en el cine animado. Fue el comienzo de una revolución en la animación y un referente en narración para todo público.
+            </li>
+            <li><strong>Matrix (1999)</strong> – Las Wachowski
+                <br>Esta película popularizó el uso de efectos especiales como el “bullet time” y revolucionó el cine de acción con su combinación de filosofía, estética ciberpunk y coreografías de artes marciales. Matrix fue un éxito crítico y comercial que redefinió los estándares visuales y temáticos del cine de ciencia ficción.
+            </li>
+            <li><strong>Avatar (2009)</strong> – James Cameron
+                <br>Avatar marcó un hito en la cinematografía al emplear tecnología de captura de movimiento y efectos visuales 3D de vanguardia, creando un universo inmersivo que elevó el nivel de calidad en las producciones de efectos especiales. Fue clave para la popularización del cine en 3D y demostró el potencial de la tecnología en la construcción de mundos.
+            </li>
+        </ol>
+
+        <p>Estas películas no sólo revolucionaron la técnica y el estilo visual del cine, sino que también expandieron sus fronteras temáticas y generaron nuevas expectativas sobre lo que el cine puede ofrecer.</p>
+    </div>
+    
+    <div class="video-container">
+        <iframe src="https://www.youtube.com/embed/S6vDnwa3MaA" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    </div>
+</body>
+</html>
+
 
