--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
             margin: 0;
             font-family: Arial, sans-serif;
             background-color: violet;
-            color: #f6f1e3; /* Blanco hueso */
+            color: #000; /* Color de texto negro para contraste */
         }
         .cover {
             text-align: center;
@@ -27,6 +27,7 @@
             display: none; /* Oculta el contenido inicialmente */
             padding: 20px;
             line-height: 1.6;
+            background-color: #f6f1e3; /* Fondo blanco hueso */
         }
         .video-container {
             display: flex;
@@ -101,5 +102,3 @@
     </script>
 </body>
 </html>
-
-
