--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
     </div>
     <div class="content">
         <h2>Video relacionado:</h2>
-        <iframe src="https://www.youtube.com/embed/VIDEO_ID" allowfullscreen></iframe>
+        <iframe src="https://www.youtube.com/embed/S6vDnwa3MaA" allowfullscreen></iframe>
     </div>
 </body>
 </html>
