--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="es">
 <head>
     <meta charset="UTF-8">
@@ -77,8 +77,6 @@
             Avatar marcó un hito en la cinematografía al emplear tecnología de captura de movimiento y efectos visuales 3D de vanguardia, creando un universo inmersivo que elevó el nivel de calidad en las producciones de efectos especiales. Fue clave para la popularización del cine en 3D y demostró el potencial de la tecnología en la construcción de mundos.</li>
         </ol>
         <p>Estas películas no sólo revolucionaron la técnica y el estilo visual del cine, sino que también expandieron sus fronteras temáticas y generaron nuevas expectativas sobre lo que el cine puede ofrecer.</p>
-    </div>
-    <div class="content">
         <h2>Video relacionado:</h2>
         <iframe src="https://www.youtube.com/embed/S6vDnwa3MaA" allowfullscreen></iframe>
     </div>
